--- a/index-3.html
+++ b/index-3.html
@@ -86,17 +86,17 @@
                                         <a class="animation" href="javascript:void(0)">Obituaries</a>
                                         <ul class="main-menu__dropdown sub-menu">
                                             <li class="menu--item second-level">
-                                                <a href="multi-docs.html" class="menu--link">
+                                                <a href="obituaries-grid.html" class="menu--link">
                                                     Obituaries Grid
                                                 </a>
                                             </li>
                                             <li class="menu--item second-level">
-                                                <a href="single-element.html" class="menu--link">
+                                                <a href="obituaries-list.html" class="menu--link">
                                                     Obituaries List
                                                 </a>
                                             </li>
                                             <li class="menu--item">
-                                                <a href="two-columns.html" class="menu--link">
+                                                <a href="obituaries-details.html" class="menu--link">
                                                     Obituaries Details
                                                 </a>
                                             </li>
@@ -511,7 +511,7 @@
 
                         <div class="row gutters-30">
                             <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 wow animate__fadeInUp" data-wow-duration="1200ms" data-wow-delay="600ms">
-                                <div class="rt-card rt-card--style-7 d-flex align-items-start align-items-md-center flex-column flex-md-row ">
+                                <div class="rt-card rt-card--style-7 d-flex align-items-start align-items-md-center flex-column flex-md-row">
                                     <div class="icon d-inline-flex justify-content-center align-items-center">
                                         <img src="images/obituaries/obituary-img-180p-1.jpg" alt="" class="obituary-img">
                                     </div>
@@ -545,7 +545,7 @@
                                 </div>
                             </div>
                             <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 wow animate__fadeInUp" data-wow-duration="1200ms" data-wow-delay="600ms">
-                                <div class="rt-card rt-card--style-7 d-flex align-items-center">
+                                <div class="rt-card rt-card--style-7 d-flex align-items-start align-items-md-center flex-column flex-md-row">
                                     <div class="icon d-inline-flex justify-content-center align-items-center">
                                         <img src="images/obituaries/obituary-img-180p-2.jpg" alt="" class="obituary-img">
                                     </div>
@@ -579,7 +579,7 @@
                                 </div>
                             </div>
                             <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 wow animate__fadeInUp" data-wow-duration="1200ms" data-wow-delay="600ms">
-                                <div class="rt-card rt-card--style-7 d-flex align-items-center">
+                                <div class="rt-card rt-card--style-7 d-flex align-items-start align-items-md-center flex-column flex-md-row">
                                     <div class="icon d-inline-flex justify-content-center align-items-center">
                                         <img src="images/obituaries/obituary-img-180p-3.jpg" alt="" class="obituary-img">
                                     </div>
@@ -613,7 +613,7 @@
                                 </div>
                             </div>
                             <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 wow animate__fadeInUp" data-wow-duration="1200ms" data-wow-delay="600ms">
-                                <div class="rt-card rt-card--style-7 d-flex align-items-center">
+                                <div class="rt-card rt-card--style-7 d-flex align-items-start align-items-md-center flex-column flex-md-row">
                                     <div class="icon d-inline-flex justify-content-center align-items-center">
                                         <img src="images/obituaries/obituary-img-180p-4.jpg" alt="" class="obituary-img">
                                     </div>
@@ -647,7 +647,7 @@
                                 </div>
                             </div>
                             <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 wow animate__fadeInUp" data-wow-duration="1200ms" data-wow-delay="600ms">
-                                <div class="rt-card rt-card--style-7 d-flex align-items-center">
+                                <div class="rt-card rt-card--style-7 d-flex align-items-start align-items-md-center flex-column flex-md-row">
                                     <div class="icon d-inline-flex justify-content-center align-items-center">
                                         <img src="images/obituaries/obituary-img-180p-5.jpg" alt="" class="obituary-img">
                                     </div>
@@ -681,7 +681,7 @@
                                 </div>
                             </div>
                             <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 wow animate__fadeInUp" data-wow-duration="1200ms" data-wow-delay="600ms">
-                                <div class="rt-card rt-card--style-7 d-flex align-items-center">
+                                <div class="rt-card rt-card--style-7 d-flex align-items-start align-items-md-center flex-column flex-md-row">
                                     <div class="icon d-inline-flex justify-content-center align-items-center">
                                         <img src="images/obituaries/obituary-img-180p-6.jpg" alt="" class="obituary-img">
                                     </div>
