--- a/obituaries-details.html
+++ b/obituaries-details.html
@@ -86,17 +86,17 @@
                                         <a class="animation" href="javascript:void(0)">Obituaries</a>
                                         <ul class="main-menu__dropdown sub-menu">
                                             <li class="menu--item second-level">
-                                                <a href="multi-docs.html" class="menu--link">
+                                                <a href="obituaries-grid.html" class="menu--link">
                                                     Obituaries Grid
                                                 </a>
                                             </li>
                                             <li class="menu--item second-level">
-                                                <a href="single-element.html" class="menu--link">
+                                                <a href="obituaries-list.html" class="menu--link">
                                                     Obituaries List
                                                 </a>
                                             </li>
                                             <li class="menu--item">
-                                                <a href="two-columns.html" class="menu--link">
+                                                <a href="obituaries-details.html" class="menu--link">
                                                     Obituaries Details
                                                 </a>
                                             </li>
@@ -599,7 +599,7 @@
                             
                             <div class="tab-pane fade show active" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
                                 <div class="row gutters-30">
-                                    <div class="col-xl-8">
+                                    <div class="col-lg-8 col-xl-8">
                                         <div class="memory-book-content">
                                             <div class="memory-post-form-wrapper wow animate__fadeInUp" data-wow-duration="1200ms" data-wow-delay="300ms">
                                                 <h3 class="title">
@@ -977,7 +977,7 @@
                                                 </div>
                                             </div>
 
-                                            <div class="pagination-wrapper pagination-wrapper--style-2 text-center wow animate__fadeInUp " data-wow-duration="1200ms" data-wow-delay="900ms">
+                                            <div class="pagination-wrapper pagination-wrapper--style-2 text-center mb-5 mb-lg-0 wow animate__fadeInUp " data-wow-duration="1200ms" data-wow-delay="900ms">
                                                 <nav aria-label="Page navigation example">
                                                     <ul class="pagination justify-content-center">
                                                         <li class="page-item">
@@ -1002,7 +1002,7 @@
                                         </div>
                                     </div>
 
-                                    <div class="col-xl-4 wow animate__fadeInUp" data-wow-duration="1200ms" data-wow-delay="400ms">
+                                    <div class="col-lg-4 col-xl-4 wow animate__fadeInUp" data-wow-duration="1200ms" data-wow-delay="400ms">
                                         <div class="post-author-info text-center">
                                             <div class="avatar circle-radius d-inline-flex justify-content-center">
                                                 <img src="images/author/author-img.jpg" alt="">
