--- a/obituaries-list.html
+++ b/obituaries-list.html
@@ -86,17 +86,17 @@
                                         <a class="animation" href="javascript:void(0)">Obituaries</a>
                                         <ul class="main-menu__dropdown sub-menu">
                                             <li class="menu--item second-level">
-                                                <a href="multi-docs.html" class="menu--link">
+                                                <a href="obituaries-grid.html" class="menu--link">
                                                     Obituaries Grid
                                                 </a>
                                             </li>
                                             <li class="menu--item second-level">
-                                                <a href="single-element.html" class="menu--link">
+                                                <a href="obituaries-list.html" class="menu--link">
                                                     Obituaries List
                                                 </a>
                                             </li>
                                             <li class="menu--item">
-                                                <a href="two-columns.html" class="menu--link">
+                                                <a href="obituaries-details.html" class="menu--link">
                                                     Obituaries Details
                                                 </a>
                                             </li>
@@ -913,7 +913,7 @@
                                     <div class="tab-pane fade show active" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
                                         <div class="row gutters-30">
                                             <div class="col-sm-12 col-xl-12 wow animate__fadeInUp" data-wow-duration="1200ms" data-wow-delay="600ms">
-                                                <div class="rt-card rt-card--style-9 d-flex align-items-center">
+                                                <div class="rt-card rt-card--style-9 d-flex align-items-center align-items-start align-items-md-center flex-column flex-md-row">
                                                     <div class="img-content">
                                                         <img src="images/obituaries/obituary-img-20.jpg" alt="" class="obituary-img">
                                                     </div>
@@ -952,7 +952,7 @@
                                                 </div>
                                             </div>
                                             <div class="col-sm-12 col-xl-12 wow animate__fadeInUp" data-wow-duration="1200ms" data-wow-delay="600ms">
-                                                <div class="rt-card rt-card--style-9 d-flex align-items-center">
+                                                <div class="rt-card rt-card--style-9 d-flex align-items-center align-items-start align-items-md-center flex-column flex-md-row">
                                                     <div class="img-content">
                                                         <img src="images/obituaries/obituary-img-21.jpg" alt="" class="obituary-img">
                                                     </div>
@@ -991,7 +991,7 @@
                                                 </div>
                                             </div>
                                             <div class="col-sm-12 col-xl-12 wow animate__fadeInUp" data-wow-duration="1200ms" data-wow-delay="600ms">
-                                                <div class="rt-card rt-card--style-9 d-flex align-items-center">
+                                                <div class="rt-card rt-card--style-9 d-flex align-items-center align-items-start align-items-md-center flex-column flex-md-row">
                                                     <div class="img-content">
                                                         <img src="images/obituaries/obituary-img-22.jpg" alt="" class="obituary-img">
                                                     </div>
@@ -1030,7 +1030,7 @@
                                                 </div>
                                             </div>
                                             <div class="col-sm-12 col-xl-12 wow animate__fadeInUp" data-wow-duration="1200ms" data-wow-delay="600ms">
-                                                <div class="rt-card rt-card--style-9 d-flex align-items-center">
+                                                <div class="rt-card rt-card--style-9 d-flex align-items-center align-items-start align-items-md-center flex-column flex-md-row">
                                                     <div class="img-content">
                                                         <img src="images/obituaries/obituary-img-23.jpg" alt="" class="obituary-img">
                                                     </div>
@@ -1069,7 +1069,7 @@
                                                 </div>
                                             </div>
                                             <div class="col-sm-12 col-xl-12 wow animate__fadeInUp" data-wow-duration="1200ms" data-wow-delay="600ms">
-                                                <div class="rt-card rt-card--style-9 d-flex align-items-center">
+                                                <div class="rt-card rt-card--style-9 d-flex align-items-center align-items-start align-items-md-center flex-column flex-md-row">
                                                     <div class="img-content">
                                                         <img src="images/obituaries/obituary-img-24.jpg" alt="" class="obituary-img">
                                                     </div>
@@ -1108,7 +1108,7 @@
                                                 </div>
                                             </div>
                                             <div class="col-sm-12 col-xl-12 wow animate__fadeInUp" data-wow-duration="1200ms" data-wow-delay="600ms">
-                                                <div class="rt-card rt-card--style-9 d-flex align-items-center">
+                                                <div class="rt-card rt-card--style-9 d-flex align-items-center align-items-start align-items-md-center flex-column flex-md-row">
                                                     <div class="img-content">
                                                         <img src="images/obituaries/obituary-img-20.jpg" alt="" class="obituary-img">
                                                     </div>
