--- a/testimonial.html
+++ b/testimonial.html
@@ -86,17 +86,17 @@
                                         <a class="animation" href="javascript:void(0)">Obituaries</a>
                                         <ul class="main-menu__dropdown sub-menu">
                                             <li class="menu--item second-level">
-                                                <a href="multi-docs.html" class="menu--link">
+                                                <a href="obituaries-grid.html" class="menu--link">
                                                     Obituaries Grid
                                                 </a>
                                             </li>
                                             <li class="menu--item second-level">
-                                                <a href="single-element.html" class="menu--link">
+                                                <a href="obituaries-list.html" class="menu--link">
                                                     Obituaries List
                                                 </a>
                                             </li>
                                             <li class="menu--item">
-                                                <a href="two-columns.html" class="menu--link">
+                                                <a href="obituaries-details.html" class="menu--link">
                                                     Obituaries Details
                                                 </a>
                                             </li>
