--- a/index-3.html
+++ b/index-3.html
@@ -1458,7 +1458,9 @@
 
                                     <div class="content">
                                         <h4 class="title">
-                                            Variety of Blooms Basket
+                                            <a href="" class="title-link">
+                                                Variety of Blooms Basket
+                                            </a>
                                         </h4>
                                         <span class="price">$60.50</p>
                                     </div>
@@ -1484,7 +1486,9 @@
 
                                     <div class="content">
                                         <h4 class="title">
-                                            Mixed Flower Basket
+                                            <a href="" class="title-link">
+                                                Mixed Flower Basket
+                                            </a>
                                         </h4>
                                         <span class="price">$60.50</p>
                                     </div>
@@ -1510,7 +1514,9 @@
 
                                     <div class="content">
                                         <h4 class="title">
-                                            Mixed Flower Basket
+                                            <a href="" class="title-link">
+                                                Mixed Flower Basket
+                                            </a>
                                         </h4>
                                         <span class="price">$60.50</p>
                                     </div>
@@ -1536,7 +1542,9 @@
 
                                     <div class="content">
                                         <h4 class="title">
-                                            Mixed Flower Basket
+                                            <a href="" class="title-link">
+                                                Mixed Flower Basket
+                                            </a>
                                         </h4>
                                         <span class="price">$60.50</p>
                                     </div>
