updated qc fixing

--- a/404.html
+++ b/404.html
@@ -438,7 +438,7 @@
                                         </p>
                                     </div>
 
-                                    <a href="index.html" class="go-to-home-btn d-inline-flex align-items-center wow animate__fadeInUp" data-wow-duration="1200ms" data-wow-delay="500ms">
+                                    <a href="index.html" class="go-to-home-btn button-secondary btn-animation d-inline-flex align-items-center wow animate__fadeInUp" data-wow-duration="1200ms" data-wow-delay="500ms">
                                         <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M15.8327 10H4.16602" stroke="white" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
                                             <path d="M9.99935 15.8334L4.16602 10L9.99935 4.16669" stroke="white" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
@@ -465,7 +465,7 @@
                                                     <img src="images/logo/logo-2.svg" alt="logo-footer">
                                                 </a>
                                             </div>
-                                            <p class="para-text text">
+                                            <p class="para-text text pe-4">
                                                 Lorem ipsum dolor sit amet consectur. Purus vestibulum ac sem purus. Risus id ante turpis sit.
                                             </p>
                                             <ul class="social-list d-flex align-items-center">
@@ -591,9 +591,11 @@
                                     ©2023 Obituary Listing. All rights reserved by <a href="www.radiustheme.com/">RadiusTheme</a>
                                 </p>
     
-                                <button class="to-top para-text">
+                                <button class="to-top para-text d-flex align-items-center">
                                     Back to top
-                                    <i class="icon-paper-plane-1"></i>
+                                    <div class="icon d-flex justify-content-center align-items-center">
+                                        <i class="icon-paper-plane-1"></i>
+                                    </div>
                                 </button>
                             </div>
                         </div>
