--- a/contact.html
+++ b/contact.html
@@ -528,6 +528,13 @@
                         </div>
                         
                     </div>
+                    <ul class="shape-parallax-list d-none d-lg-block">
+                        <li class="">
+                            <div data-depth="5.00">
+                                <img src="images/contact/contact-shape-1.svg" alt="shape" class="">
+                            </div>
+                        </li>
+                    </ul>
                 </div>
                 <!-- End Contact Form-->
 
@@ -553,7 +560,7 @@
                                                     <img src="images/logo/logo-2.svg" alt="logo-footer">
                                                 </a>
                                             </div>
-                                            <p class="para-text text">
+                                            <p class="para-text text pe-4">
                                                 Lorem ipsum dolor sit amet consectur. Purus vestibulum ac sem purus. Risus id ante turpis sit.
                                             </p>
                                             <ul class="social-list d-flex align-items-center">
@@ -679,9 +686,11 @@
                                     ©2023 Obituary Listing. All rights reserved by <a href="www.radiustheme.com/">RadiusTheme</a>
                                 </p>
     
-                                <button class="to-top para-text">
+                                <button class="to-top para-text d-flex align-items-center">
                                     Back to top
-                                    <i class="icon-paper-plane-1"></i>
+                                    <div class="icon d-flex justify-content-center align-items-center">
+                                        <i class="icon-paper-plane-1"></i>
+                                    </div>
                                 </button>
                             </div>
                         </div>
