--- a/index.html
+++ b/index.html
@@ -330,7 +330,6 @@
                                                 <a href="" class="login-btn d-flex align-items-center gap-2">
                                                     <i class="icon-ei_user"></i>
                                                     Login / Register
-                                                    <span>(6)</span>
                                                 </a>
                                             </li>
                                         </ul>
@@ -389,7 +388,7 @@
                                             </div>
                                         </div>
 
-                                        <p class="para-text wow animate__fadeInUp" data-wow-duration="1200ms" data-wow-delay="600ms">
+                                        <p class="para-text sub-text wow animate__fadeInUp" data-wow-duration="1200ms" data-wow-delay="600ms">
                                             Over <span>50,000</span> obituary listings are now available.
                                         </p>
                                     </div>
@@ -1106,13 +1105,13 @@
                     <section class="app-download-section app-download-section--style-1 overflow-visible">
                         <div class="container">
                             <div class="app-download-content-wrapper">
-                                <div class="row align-items-center">
-                                    <div class="offset-md-0 offset-lg-4 offset-xl-4 col-md-8 col-lg-5 col-xl-5">
+                                <div class="row justify-content-between align-items-center">
+                                    <div class="offset-md-0 offset-lg-4 offset-xl-3 col-md-8 col-lg-5 col-xl-5">
                                         <div class="title-wrapper text-start mb-4 mb-md-0">
                                             <h2 class="section-title wow animate__fadeInUp" data-wow-duration="1200ms" data-wow-delay="400ms">
                                                 Download Our Mobile App
                                             </h2>
-                                            <p class="para-text wow animate__fadeInUp" data-wow-duration="1200ms" data-wow-delay="500ms">
+                                            <p class="para-text pe-5 wow animate__fadeInUp" data-wow-duration="1200ms" data-wow-delay="500ms">
                                                 Lorem ipsum dolor sit amet consectetur. Ipsum lectus diam vulputate pellentesque turpis congue.
                                             </p>
                                         </div>
@@ -1177,7 +1176,7 @@
                                                     <img src="images/logo/logo-2.svg" alt="logo-footer">
                                                 </a>
                                             </div>
-                                            <p class="para-text text">
+                                            <p class="para-text text pe-4">
                                                 Lorem ipsum dolor sit amet consectur. Purus vestibulum ac sem purus. Risus id ante turpis sit.
                                             </p>
                                             <ul class="social-list d-flex align-items-center">
@@ -1303,9 +1302,11 @@
                                     ©2023 Obituary Listing. All rights reserved by <a href="www.radiustheme.com/">RadiusTheme</a>
                                 </p>
     
-                                <button class="to-top para-text">
+                                <button class="to-top para-text d-flex align-items-center">
                                     Back to top
-                                    <i class="icon-paper-plane-1"></i>
+                                    <div class="icon d-flex justify-content-center align-items-center">
+                                        <i class="icon-paper-plane-1"></i>
+                                    </div>
                                 </button>
                             </div>
                         </div>
