--- a/assets/fontello-icon-webfont/demo.html
+++ b/assets/fontello-icon-webfont/demo.html
@@ -146,11 +146,11 @@
     }
     @font-face {
       font-family: 'rt-docfind';
-      src: url('./font/rt-docfind.eot?94328759');
-      src: url('./font/rt-docfind.eot?94328759#iefix') format('embedded-opentype'),
-           url('./font/rt-docfind.woff?94328759') format('woff'),
-           url('./font/rt-docfind.ttf?94328759') format('truetype'),
-           url('./font/rt-docfind.svg?94328759#rt-docfind') format('svg');
+      src: url('./font/rt-docfind.eot?7626430');
+      src: url('./font/rt-docfind.eot?7626430#iefix') format('embedded-opentype'),
+           url('./font/rt-docfind.woff?7626430') format('woff'),
+           url('./font/rt-docfind.ttf?7626430') format('truetype'),
+           url('./font/rt-docfind.svg?7626430#rt-docfind') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -287,14 +287,17 @@
         <div class="span3" title="Code: 0xe815">
           <i class="demo-icon icon-email">&#xe815;</i> <span class="i-name">icon-email</span><span class="i-code">0xe815</span>
         </div>
+        <div class="span3" title="Code: 0xe816">
+          <i class="demo-icon icon-play">&#xe816;</i> <span class="i-name">icon-play</span><span class="i-code">0xe816</span>
+        </div>
         <div class="span3" title="Code: 0xe817">
           <i class="demo-icon icon-cart">&#xe817;</i> <span class="i-name">icon-cart</span><span class="i-code">0xe817</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xe818">
           <i class="demo-icon icon-clock">&#xe818;</i> <span class="i-name">icon-clock</span><span class="i-code">0xe818</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xe81a">
           <i class="demo-icon icon-phone">&#xe81a;</i> <span class="i-name">icon-phone</span><span class="i-code">0xe81a</span>
         </div>
@@ -304,11 +307,11 @@
         <div class="span3" title="Code: 0xe823">
           <i class="demo-icon icon-image">&#xe823;</i> <span class="i-name">icon-image</span><span class="i-code">0xe823</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xe824">
           <i class="demo-icon icon-video">&#xe824;</i> <span class="i-name">icon-video</span><span class="i-code">0xe824</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xe826">
           <i class="demo-icon icon-share">&#xe826;</i> <span class="i-name">icon-share</span><span class="i-code">0xe826</span>
         </div>
@@ -318,11 +321,11 @@
         <div class="span3" title="Code: 0xe828">
           <i class="demo-icon icon-location-3">&#xe828;</i> <span class="i-name">icon-location-3</span><span class="i-code">0xe828</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xe829">
           <i class="demo-icon icon-carbon_forum">&#xe829;</i> <span class="i-name">icon-carbon_forum</span><span class="i-code">0xe829</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xe82b">
           <i class="demo-icon icon-check-2">&#xe82b;</i> <span class="i-name">icon-check-2</span><span class="i-code">0xe82b</span>
         </div>
@@ -332,11 +335,11 @@
         <div class="span3" title="Code: 0xe82d">
           <i class="demo-icon icon-doctor">&#xe82d;</i> <span class="i-name">icon-doctor</span><span class="i-code">0xe82d</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xe82f">
           <i class="demo-icon icon-grid-2">&#xe82f;</i> <span class="i-name">icon-grid-2</span><span class="i-code">0xe82f</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xe830">
           <i class="demo-icon icon-i">&#xe830;</i> <span class="i-name">icon-i</span><span class="i-code">0xe830</span>
         </div>
@@ -346,11 +349,11 @@
         <div class="span3" title="Code: 0xe832">
           <i class="demo-icon icon-location-pointer">&#xe832;</i> <span class="i-name">icon-location-pointer</span><span class="i-code">0xe832</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xe833">
           <i class="demo-icon icon-location-pointer-2">&#xe833;</i> <span class="i-name">icon-location-pointer-2</span><span class="i-code">0xe833</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xe834">
           <i class="demo-icon icon-lock">&#xe834;</i> <span class="i-name">icon-lock</span><span class="i-code">0xe834</span>
         </div>
@@ -360,11 +363,11 @@
         <div class="span3" title="Code: 0xe836">
           <i class="demo-icon icon-phone-2">&#xe836;</i> <span class="i-name">icon-phone-2</span><span class="i-code">0xe836</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xe837">
           <i class="demo-icon icon-round-tick">&#xe837;</i> <span class="i-name">icon-round-tick</span><span class="i-code">0xe837</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xe838">
           <i class="demo-icon icon-star">&#xe838;</i> <span class="i-name">icon-star</span><span class="i-code">0xe838</span>
         </div>
@@ -374,11 +377,11 @@
         <div class="span3" title="Code: 0xe83a">
           <i class="demo-icon icon-user-3">&#xe83a;</i> <span class="i-name">icon-user-3</span><span class="i-code">0xe83a</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xe83b">
           <i class="demo-icon icon-arrow-double">&#xe83b;</i> <span class="i-name">icon-arrow-double</span><span class="i-code">0xe83b</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xe83d">
           <i class="demo-icon icon-article">&#xe83d;</i> <span class="i-name">icon-article</span><span class="i-code">0xe83d</span>
         </div>
@@ -388,11 +391,11 @@
         <div class="span3" title="Code: 0xe83f">
           <i class="demo-icon icon-calender-2">&#xe83f;</i> <span class="i-name">icon-calender-2</span><span class="i-code">0xe83f</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xe840">
           <i class="demo-icon icon-calender-3">&#xe840;</i> <span class="i-name">icon-calender-3</span><span class="i-code">0xe840</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xe841">
           <i class="demo-icon icon-calender-4">&#xe841;</i> <span class="i-name">icon-calender-4</span><span class="i-code">0xe841</span>
         </div>
@@ -402,11 +405,11 @@
         <div class="span3" title="Code: 0xe843">
           <i class="demo-icon icon-select-category">&#xe843;</i> <span class="i-name">icon-select-category</span><span class="i-code">0xe843</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xe846">
           <i class="demo-icon icon-arrow-right-1">&#xe846;</i> <span class="i-name">icon-arrow-right-1</span><span class="i-code">0xe846</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xf315">
           <i class="demo-icon icon-youtube">&#xf315;</i> <span class="i-name">icon-youtube</span><span class="i-code">0xf315</span>
         </div>
